name:                  haskoin-faucet
version:               0.0.1
synopsis:              
    Haskoin testnet faucet
description:         
    Haskoin testnet faucet
homepage:              http://github.com/haskoin/haskoin-faucet
bug-reports:           http://github.com/haskoin/haskoin-faucet/issues
author:                Philippe Laprade
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://haskoin.com/srv/git/haskoin-faucet.git

executable hf
    main-is:           Main.hs
    build-depends:     aeson >= 0.8  && < 0.9,
                       base >= 4.6  && < 5, 
                       base64-bytestring >= 1.0 && < 1.1,
                       bcrypt >= 0.0.5 && < 0.1,
                       bytestring >= 0.10.4 && < 0.11, 
                       daemons >= 0.2  && < 0.3,
                       data-default >= 0.5 && < 0.6,
                       directory >= 1.2  && < 1.3,
                       either >= 4.3 && < 4.4,
                       entropy >= 0.3 && < 0.4,
                       haskoin >= 0.1  && < 0.2, 
                       haskoin-wallet >= 0.0  && < 0.1, 
                       http-types >= 0.8  && < 0.9,
                       http-client >= 0.4  && < 0.5,
                       http-conduit >= 2.1  && < 2.2,
                       monad-logger >= 0.3  && < 0.4,
                       persistent-mysql >= 2.1  && < 2.2,
                       text >= 1.2  && < 1.3,
                       time >= 1.4  && < 1.5,
                       wai >= 3.0 && < 3.1,
                       warp >= 3.0  && < 3.1,
                       yaml >= 0.8  && < 0.9,
                       yesod >= 1.4  && < 1.5
    hs-source-dirs:    . 
    ghc-options:       -Wall 

test-suite test-haskoinfaucet
    type:              exitcode-stdio-1.0
    main-is:           TestMain.hs
    other-modules:     Network.Haskoin.Faucet.Units,
                       Network.Haskoin.Faucet.Tests,
                       Network.Haskoin.Faucet.Arbitrary
    build-depends:     aeson >= 0.8 && < 0.9,
                       base >= 4.6  && < 5, 
                       base64-bytestring >= 1.0 && < 1.1,
                       bcrypt >= 0.0.5 && < 0.1,
                       bytestring >= 0.10.4 && < 0.11, 
                       either >= 4.3 && < 4.4,
                       entropy >= 0.3 && < 0.4,
                       haskoin >= 0.1  && < 0.2, 
                       haskoin-wallet >= 0.0  && < 0.1, 
                       text >= 1.2  && < 1.3,
                       time >= 1.4  && < 1.5,
                       wai >= 3.0 && < 3.1,
                       yesod >= 1.4  && < 1.5,
                       HUnit >= 1.2  && < 1.3,
                       QuickCheck >= 2.7  && < 2.8, 
                       test-framework >= 0.8  && < 0.9, 
                       test-framework-quickcheck2 >= 0.3  && < 0.4, 
                       test-framework-hunit >= 0.3  && < 0.4 
    hs-source-dirs:    . tests
    ghc-options:       -Wall 

